src/components/app/SuperAdmin/TableWrappers/DashboardTableWrapper.css
.dashboard-table-wrapper .ant-table-wrapper {
  border: 1px solid #e7e7e7;
  border-radius: 5px;
  overflow: hidden;
}

.dashboard-table-wrapper .ant-table-tbody :first-child {
  padding-left: 30px;
}
.dashboard-table-wrapper .ant-table-tbody > tr > td {
  border: none;
  font-weight: 500;
}

.dashboard-table-wrapper .ant-table-thead th:first-child {
  padding-top: 24px;
  padding-left: 30px;
  padding-bottom: 24px;
}
.dashboard-table-wrapper .ant-table-thead > tr > th {
  font-weight: 600;
  background-color: white;
}

.dashboard-table-wrapper .ant-table-cell-fix-left:first-child {
  border-right: 6px solid #e8e8e8;
}
.dashboard-table-wrapper .ant-table-cell-fix-left-last::after {
  border-right: 1px solid #e8e8e8;
  width: 0px;
}

.dashboard-table-wrapper thead .ant-table-cell-fix-left,
.dashboard-table-wrapper thead .ant-table-cell-fix-left-last::after {
  border-right: 0px !important;
}

.dashboard-table-wrapper
  .ant-table-ping-left
  .ant-table-cell-fix-left-last::after {
  border: none;
  width: 30px;
  box-shadow: inset 10px 0 8px -8px rgb(0 0 0 / 15%);
}

.dashboard-table-wrapper
  .ant-table-ping-right
  .ant-table-cell-fix-right-last::before {
  box-shadow: none;
}

.dashboard-table-wrapper .ant-table-cell::before {
  width: 0px !important;
}

